--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
-        "mckenziearts/laravel-notify": "^2.1",
-        "paypal/rest-api-sdk-php": "^1.14",
-        "stripe/stripe-php": "^7.72"
+        "mckenziearts/laravel-notify": "^2.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
